# image-analysis-and-classification-algorithms

./: .gitignore  CMakeLists.txt  main.cpp  main.py
homework-1/: main.cpp
homework-2/: main.cpp
homework-3/: CMakeLists.txt  main.cpp
homework-4/: CMakeLists.txt  main.cpp
homework-5/: CMakeLists.txt
homework-6/: CMakeLists.txt  main.cpp
homework-7/: requirements.txt
homework-8/: main.py
